--- a/src-lookup-sample/main/default/classes/ContactLookupTest.cls
+++ b/src-lookup-sample/main/default/classes/ContactLookupTest.cls
@@ -1,39 +1,56 @@
 @IsTest
 private class ContactLookupTest {
+  @IsTest
+  static void shouldCreateLookupResults() {
+    // DATA
+    Account account = new Account(Name = 'account name test');
+    insert account;
 
-    @IsTest
-    static void contactLookupTest() {
+    Contact contact = new Contact(
+      FirstName = 'FirstName',
+      LastName = 'LastName',
+      Phone = '123456789',
+      Email = 'FirstName.LastName@example.com',
+      HasOptedOutOfEmail = false,
+      AccountId = account.Id
+    );
+    insert contact;
 
-        // DATA
-        Account account = new Account(
-            Name = 'account name test'
-        );
-        insert account;
+    Map<String, Object> payload = new Map<String, Object>();
+    payload.put('accountName', account.Name);
 
-        Contact contact = new Contact(
-            FirstName = 'FirstName',
-            LastName = 'LastName',
-            Phone = '123456789',
-            Email = 'FirstName.LastName@example.com',
-            HasOptedOutOfEmail = false,
-            AccountId = account.Id
-        );
-        insert contact;
+    // TEST
+    Test.startTest();
+    ContactLookup contactLookup = new ContactLookup();
+    List<LookupResult> selectionResult = ContactLookup.getSelection(
+      new List<String>{ contact.id },
+      payload
+    );
+    List<LookupResult> defaultSearchResultsResult = ContactLookup.getDefaultSearchResults(
+      payload
+    );
+    List<LookupResult> searchResultsResult = ContactLookup.getSearchResults(
+      '123',
+      new List<String>(),
+      payload
+    );
+    Test.stopTest();
 
-        Map<String, Object> payload = new Map<String, Object>();
-        payload.put('accountName', account.Name);
-
-        // TEST
-        Test.startTest();
-            ContactLookup contactLookup = new ContactLookup();
-            List<LookupResult> selectionResult = ContactLookup.getSelection(new List<String>{contact.id}, payload);
-            List<LookupResult> defaultSearchResultsResult = ContactLookup.getDefaultSearchResults(payload); 
-            List<LookupResult> searchResultsResult = ContactLookup.getSearchResults('123', new List<String>(), payload); 
-        Test.stopTest();
-
-        // ASSERT
-        Assert.areEqual(selectionResult[0].id, contact.id);
-        Assert.areEqual(defaultSearchResultsResult[0].id, contact.id);
-        Assert.areEqual(searchResultsResult[0].id, contact.id);
-    }
+    // ASSERT
+    Assert.areEqual(
+      selectionResult[0].id,
+      contact.id,
+      'should get the selection'
+    );
+    Assert.areEqual(
+      defaultSearchResultsResult[0].id,
+      contact.id,
+      'should set getDefaultResults from recentlyViewed'
+    );
+    Assert.areEqual(
+      searchResultsResult[0].id,
+      contact.id,
+      'filters contacts using searchKey'
+    );
+  }
 }
