Add Codecov integration for apex (#6)
* Add Codecov integration for apex

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

--- a/src-lookup-sample/main/default/classes/ContactLookup.cls
+++ b/src-lookup-sample/main/default/classes/ContactLookup.cls
@@ -96,7 +96,7 @@ public class ContactLookup implements LookupResult.ILookupResult {
     result.id = contact.Id;
     result.icon = ACCOUNT_ICON;
     result.title = contact.Name;
-    result.payload = contact.getPopulatedFieldsAsMap();
+    result.recordPayload = contact.getPopulatedFieldsAsMap();
     List<LookupResult.Subtitle> subtitles = new List<LookupResult.Subtitle>();
 
     if (String.isNotBlank(contact.Email)) {
