--- a/src-lookup/main/default/classes/LookupResult.cls
+++ b/src-lookup/main/default/classes/LookupResult.cls
@@ -8,7 +8,7 @@ public class LookupResult {
   @AuraEnabled
   public List<Subtitle> subtitles { get; set; }
   @AuraEnabled
-  public Map<String, Object> payload { get; set; }
+  public Map<String, Object> recordPayload { get; set; }
 
   public class Subtitle {
     @AuraEnabled
@@ -18,12 +18,14 @@ public class LookupResult {
     @AuraEnabled
     public Object value { get; set; }
     @AuraEnabled
+    public Boolean highlightSearchTerm { get; set; }
+    @AuraEnabled
     public Map<String, Object> props { get; set; }
   }
 
   public interface ILookupResult {
     List<LookupResult> getSelection(
-      List<String> values,
+      List<String> selectedIds,
       Map<String, Object> payload
     );
     List<LookupResult> getDefaultSearchResults(Map<String, Object> payload);
